# BasicRxJavaSample-Bazel

./: BUILD.bazel  README.md  WORKSPACE
app/src/main/: AndroidManifest.xml
